Auto format to Google code style